drkns 01.10.2016 14:28:21 +0200 - build 4802

1. В некоторых случаях не удалялись временные файлы после просмотра архивов.

drkns 01.10.2016 00:08:29 +0200 - build 4801

1. Уточнение 4800.

drkns 30.09.2016 19:31:55 +0200 - build 4800

1. 0003315: unload:plugin.dll not close panel

drkns 30.09.2016 12:04:12 +0200 - build 4799

1. Уточнение 4798.

drkns 29.09.2016 17:30:16 +0200 - build 4798

1. Не работали модификаторы с mouse wheel.

2. CtrlP/CtrlM теперь не должны конфликтовать со встроенным буфером обмена.

3. Падение при нажатии AltEnd на панели плагина с нестандартными колонками.

4. Рефакторинг.

drkns 25.09.2016 20:32:14 +0200 - build 4797

1. 0001040: Main Usermenu & Console Command: "CLS & ECHO. & ipconfig /all & ECHO. & ECHO. & PAUSE" doesn't work.

drkns 25.09.2016 20:06:40 +0200 - build 4796

1. 0003255: Content of symbolic links not copied

2. 0003309: File associations - Ctrl-Up and Ctrl-Down do not move items

3. 0003310: PluginW.pas out of sync with plugin.hpp

4. 0003311: Incorrect QueryDosDevice call in MatchNtPathRoot (pathmix.cpp)

drkns 22.09.2016 02:17:12 +0200 - build 4795

1. Древний, ещё как минимум со времён 1.65 баг - в главном меню можно было получить переполнение стека.

2. Рефакторинг.

drkns 18.09.2016 02:48:50 +0200 - build 4794

1. Обход бага VS. Подробности - connect #3103404.

drkns 17.09.2016 22:13:26 +0200 - build 4793

1. constexpr.

2. longPathAware = true для Windows 10.

3. Рефакторинг.

drkns 15.09.2016 02:23:25 +0200 - build 4792

1. Уточнение 4784.1.

2. Code analysis warnings.

drkns 13.09.2016 18:28:08 +0200 - build 4791

1. Падение при копировании выделенного UTF-8 текста из вьювера.

2. Некорректное преобразование text/hex в диалоге поиска.

3. Падение при нажатии End на radiobutton в диалоге.

4. Не обновлялся экран редактора при прокрутке по Ctrl-Up/Down из меню "Find all".

svs 13.09.2016 15:13:03 +0300 - build 4790

1. SQLite 3.14.2

drkns 12.09.2016 23:35:38 +0200 - build 4789

1. Уточнение 4788.3.
