@@ -1,3 +1,7 @@
+zg 01.10.2016 18:23:05 +0200 - build 4803
+
+1. 0003051: Вызов ECTL_REDRAW из диалога.
+
 drkns 01.10.2016 14:28:21 +0200 - build 4802
 
 1. В некоторых случаях не удалялись временные файлы после просмотра архивов.
